[tool.poetry]
name = "lijoa-backend"
version = "0.1.0"
description = "LIJOA backend (MVP scaffold)"
authors = ["Coders Boutique"]
readme = "README.md"
packages = [{ include = "app" }]
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.31"
python-dotenv = "^1.0.1"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.8"
[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
